# homely-ha

./: .gitignore  .pre-commit-config.yaml  API_GAP_ANALYSIS.md  CLAUDE.md  LICENSE  QUALITY_ASSESSMENT.md  README.md  cspell.json  docker-compose.yaml  hacs.json  makefile  pyproject.toml
.github/workflows/: validate.yaml
custom_components/: __init__.py
custom_components/homely/: __init__.py  alarm_control_panel.py  base_sensor.py  binary_sensor.py  button.py  config_flow.py  const.py  coordinator.py  event.py  exceptions.py  homely_api.py  manifest.json  models.py  sensor.py
custom_components/homely/translations/: en.json  nb.json
docs/: IMPLEMENTATION_STATUS.md  SENSOR_DATA_MAPPING.md
tests/components/homely/: __init__.py  conftest.py  const.py  test_alarm_event.py  test_alarm_states.py  test_base_sensor.py  test_binary_sensor.py  test_button.py  test_config_flow.py  test_coordinator.py  test_device_detection.py  test_device_online.py  test_gateway.py  test_gateway_extras.py  test_homely_api.py  test_remaining_pin.py  test_sensor.py  test_siren_panel.py
tests/components/homely/fixtures/: alarm_state_response.json  home_response.json
